--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/vue-fontawesome": "^2.0.0",
     "core-js": "^3.6.5",
+    "pug": "^3.0.0",
+    "pug-plain-loader": "^1.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vuesax": "^4.0.1-alpha.25",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
